# meal-planner

./: .claudeignore  .codannaignore  .dockerignore  .env.docker.example  .env.example  .env.worktree  .fastembed_cache  .gitignore  .gitleaks.toml  .golangci.yml  .mutation-baseline.json  .pre-commit-config.yaml  .serena.toml  .yamllintrc  .zellij-agents.kdl  AGENT22_SUMMARY.md  AGENTS.md  AGENT_11_SUMMARY.txt  AGENT_BENCH_1_REPORT.md  AGENT_TEST_SCRIPT.sh  AI_SETUP_COMPLETE_DUMP.md  AI_SETUP_SCAFFOLDING_GUIDE.md  ANNA_SETUP.md  API_BEADS.md  ARCHITECTURE_AUDIT.md  ARCHITECTURE_AUDIT_RUST_WINDMILL.md  ARCHITECTURE_WINDMILL_EVENT_BROKER.md  AUDIT_CORRECTIONS_SUMMARY.md  AUDIT_SUMMARY.md  BACKUP_GUIDE.md  BEADS_TANDOOR_TESTING_PLAN.md  BEAD_AUDIT_CLEANUP_REPORT.md  CACHE_INTEGRATION.md  CHANGELOG_CLI.md  CIRCULAR_IMPORT_RESOLUTION.md  CI_CD_QUICK_FIXES.md  CI_CD_TEST_REVIEW.md  CLAUDE.md  CLAUDE_GLEAM_SKILL.md  CLAUDE_MEMORY.md  (+215 more)
.beads/: .gitignore  README.md  beads.jsonl  (+6 more)
gleam_style/: Cargo.toml
gleam_style/src/: lib.rs
windmill/: AGENTS.md  CLAUDE.md  Cargo.toml  README.md  fatsecret.resource-type.yaml  rt.d.ts  windmill-mcp-client.py  wmill-lock.yaml  wmill.yaml
windmill/f/fatsecret/: exercise_entries_get.script.yaml  exercise_entries_get.sh  exercise_entry_create.script.yaml  exercise_entry_create.sh  exercise_entry_delete.script.yaml  exercise_entry_delete.sh  exercise_entry_edit.script.yaml  exercise_entry_edit.sh  exercise_month_summary.script.yaml  exercise_month_summary.sh  food_add_favorite.script.yaml  food_add_favorite.sh  food_delete_favorite.script.yaml  food_delete_favorite.sh  food_entries_get.script.yaml  food_entries_get.sh  food_entries_get_month.script.yaml  food_entries_get_month.sh  food_entry_create.script.yaml  food_entry_create.sh  food_entry_delete.script.yaml  food_entry_delete.sh  food_entry_edit.script.yaml  food_entry_edit.sh  food_entry_get.script.yaml  food_entry_get.sh  food_find_barcode.script.yaml  food_find_barcode.sh  food_get.script.yaml  food_get.sh  foods_autocomplete.script.yaml  foods_autocomplete.sh  foods_get_favorites.script.yaml  foods_get_favorites.sh  foods_most_eaten.script.yaml  foods_most_eaten.sh  foods_recently_eaten.script.yaml  foods_recently_eaten.sh  foods_search.script.yaml  foods_search.sh  (+35 more)
windmill/f/fatsecret/oauth_setup.flow/: flow.yaml
windmill/f/fire-flow/check_gate1/: script.rs
windmill/f/fire-flow/check_test_execution/: script.rs
windmill/f/fire-flow/contract_loop/: flow.yaml
windmill/f/fire-flow/contract_loop.flow/: flow.yaml
windmill/f/fire-flow/contract_loop_rust.flow/: flow.yaml
windmill/f/fire-flow/error_handler/: script.script.yaml
windmill/f/fire-flow/execute/: script.rs  script.script.yaml
windmill/f/fire-flow/gate1/: script.script.yaml
windmill/f/fire-flow/gate1-rs/: script.rs
windmill/f/fire-flow/generate-rs/: script.rs
windmill/f/fire-flow/graphiti_integration/: script.rs
windmill/f/fire-flow/mem0_integration/: script.rs
windmill/f/fire-flow/mem0_integration.flow/: flow.yaml
windmill/f/fire-flow/test_execution/: script.rs
windmill/f/fire-flow/update_state/: script.rs
windmill/f/fire-flow/validate/: script.rs  script.script.yaml
windmill/f/meal-planner/: ARCHITECTURE_SUMMARY.md  FINAL_BUILD_SUMMARY.md  README.md  tandoor_api.resource.yaml  wmill.yaml
windmill/f/meal-planner/core/ncp/calculate_deviation/: script.rs  script.script.yaml
windmill/f/meal-planner/events/producers/emit_event/: script.rs
windmill/f/meal-planner/events/schemas/: mod.rs
windmill/f/meal-planner/features/: README.md
windmill/f/meal-planner/handlers/meal_planning/generate_plan/: script.rs
windmill/f/meal-planner/handlers/nutrition/set_goal/: script.rs
windmill/f/meal-planner/patterns/circuit_breaker/check/: script.rs
windmill/f/meal-planner/patterns/dlq/send_to_dlq/: script.rs
windmill/f/meal-planner/patterns/idempotency/check_processed/: script.rs
windmill/f/meal-planner/patterns/retry/calculate_delay/: script.rs
windmill/f/meal-planner/patterns/saga/start/: script.rs
windmill/f/meal-planner/patterns/saga/start_saga/: script.rs
windmill/f/meal-planner/scripts/fatsecret/diary/: fetch_diary.rs
windmill/f/meal-planner/tandoor/: tandoor.resource-type.json  test_auth.rs  test_connection.rs  test_connection.script.yaml
windmill/f/tandoor/: add_calories_all_recipes.sh  add_calories_to_all_recipes.script.yaml  add_calories_to_all_recipes.sh  add_calories_to_recipes.sh  ai_import.script.yaml  ai_import.sh  create_recipe.script.yaml  create_recipe.sh  food_batch_update.script.yaml  food_batch_update.sh  food_create.script.yaml  food_create.sh  food_delete.script.yaml  food_delete.sh  food_get.script.yaml  food_get.sh  food_list.script.yaml  food_list.sh  food_update.script.yaml  food_update.sh  format_meal_plan_output.script.yaml  format_meal_plan_output.sh  format_weekly_meal_plan.nu  format_weekly_meal_plan.script.yaml  import_all_meat_church.sh  import_all_meat_church.sh.script.yaml  ingredient_create.script.yaml  ingredient_create.sh  ingredient_delete.script.yaml  ingredient_delete.sh  ingredient_from_string.script.yaml  ingredient_from_string.sh  ingredient_get.script.yaml  ingredient_get.sh  ingredient_list.script.yaml  ingredient_list.sh  ingredient_update.script.yaml  ingredient_update.sh  keyword_create.script.yaml  keyword_create.sh  (+156 more)
windmill/f/tandoor/add_calories_to_recipes.flow/: flow.yaml
windmill/f/tandoor/batch_import_recipes.flow/: flow.yaml
windmill/f/tandoor/import_recipe.flow/: flow.yaml
windmill/f/tandoor/weekly_meal_plan.flow/: flow.yaml
windmill/schemas/: tandoor.resource-type.yaml  tandoor_api.resource.yaml
windmill/src/: lib.rs  types.rs
windmill/u/admin/: fatsecret_api.resource.yaml  tandoor_api.resource.yaml
windmill/windmill/f/fire-flow/: check_gate1.rs.yaml  check_test_execution.rs.yaml  check_valid.rs  check_valid.rs.yaml  collect_feedback.rs  collect_feedback.rs.yaml  error_handler.rs  final_result.rs  final_result.rs.yaml  gate1.rs  generate.rs  generate.rs.yaml  init.rs  init.rs.yaml  test_execution.rs.yaml  update_state.rs.yaml
(+11930 files in other folders)
