[package]
name = "meal-planner"
version = "0.1.0"
edition = "2021"

# =============================================================================
# GLEAM-STYLE STRICT SAFETY LINTS
# =============================================================================
# These lints enforce Gleam's design principles in Rust:
# - Immutability by default (no unnecessary mutation)
# - Exhaustive pattern matching (handle all cases)
# - No exceptions/panics (use Result for errors)
# - No null/undefined (use Option explicitly)
# - No unsafe code (memory safety guaranteed)
# - Pure functions (predictable, testable)
#
# AI CANNOT BYPASS THESE - They are enforced at compile time by rustc/clippy
# =============================================================================

[lints.rust]
# -----------------------------------------------------------------------------
# MEMORY SAFETY - Like Gleam, memory is always safe
# -----------------------------------------------------------------------------
unsafe_code = "forbid"                    # FORBIDDEN: No unsafe blocks anywhere
                                          # This cannot be bypassed with #[allow]

# -----------------------------------------------------------------------------
# EXHAUSTIVENESS - Like Gleam's exhaustive pattern matching
# -----------------------------------------------------------------------------
unused_must_use = "deny"                  # Must handle all Results/Options
unreachable_patterns = "deny"             # No dead pattern branches
# non_exhaustive_omitted_patterns requires nightly feature flag - disabled for now
# non_exhaustive_omitted_patterns = "deny"  # Require handling all enum variants

# -----------------------------------------------------------------------------
# IMMUTABILITY - Like Gleam, prefer immutable by default
# -----------------------------------------------------------------------------
unused_mut = "deny"                       # No unnecessary mut keywords
unused_variables = "deny"                 # No dead bindings
unused_assignments = "deny"               # No dead assignments

# -----------------------------------------------------------------------------
# CORRECTNESS - Like Gleam's compile-time guarantees
# -----------------------------------------------------------------------------
trivial_casts = "deny"                    # No pointless casts
trivial_numeric_casts = "deny"            # No pointless numeric casts
unused_imports = "deny"                   # No unused imports
dead_code = "deny"                        # No unreachable code

# -----------------------------------------------------------------------------
# DOCUMENTATION - Disabled (not part of core type safety)
# -----------------------------------------------------------------------------
# missing_docs - Disabled, not a safety concern

[lints.clippy]
# =============================================================================
# CLIPPY: GLEAM-STYLE FUNCTIONAL PURITY - ALL ERRORS, NO WARNINGS
# =============================================================================

# -----------------------------------------------------------------------------
# NO PANICS - Like Gleam, errors are values (Result), not exceptions
# -----------------------------------------------------------------------------
unwrap_used = "deny"                      # No .unwrap() - handle errors explicitly
expect_used = "deny"                      # No .expect() - handle errors explicitly
panic = "deny"                            # No panic!() - return Result instead
todo = "deny"                             # No todo!() - complete the implementation
unimplemented = "deny"                    # No unimplemented!() - handle all cases
unreachable = "deny"                      # No unreachable!() - prove with types

# Additional panic sources
unwrap_in_result = "deny"                 # No unwrap inside Result-returning fn
panic_in_result_fn = "deny"               # No panic! in Result-returning fn
exit = "deny"                             # No std::process::exit

# -----------------------------------------------------------------------------
# EXPLICIT ERROR HANDLING - Like Gleam's Result type
# -----------------------------------------------------------------------------
# result_unwrap_used and option_unwrap_used are now just unwrap_used (set above)
let_underscore_must_use = "deny"          # Don't discard important values
match_result_ok = "deny"                  # Prefer proper Result handling

# -----------------------------------------------------------------------------
# IMMUTABILITY - Like Gleam, values don't change
# -----------------------------------------------------------------------------
mut_mut = "deny"                          # No &&mut mut
needless_borrow = "deny"                  # No unnecessary &
redundant_clone = "deny"                  # No unnecessary clones
clone_on_ref_ptr = "deny"                 # No cloning Arc/Rc unnecessarily
unnecessary_mut_passed = "deny"           # Don't pass &mut when & suffices

# -----------------------------------------------------------------------------
# FUNCTIONAL STYLE - Like Gleam's pipelines and combinators
# -----------------------------------------------------------------------------
manual_map = "deny"                       # Use .map() instead of match
manual_filter = "deny"                    # Use .filter() instead of match
manual_filter_map = "deny"                # Use .filter_map()
manual_find = "deny"                      # Use .find()
manual_find_map = "deny"                  # Use .find_map()
manual_flatten = "deny"                   # Use .flatten()
manual_ok_or = "deny"                     # Use .ok_or()
needless_pass_by_value = "deny"           # Prefer references for large types
large_types_passed_by_value = "deny"      # Large types should be references

# -----------------------------------------------------------------------------
# EXHAUSTIVE MATCHING - Like Gleam's case expressions
# -----------------------------------------------------------------------------
match_single_binding = "deny"             # Simplify single-binding matches
match_wildcard_for_single_variants = "deny"  # Be explicit about variants
single_match = "deny"                     # Consider if-let for single matches
single_match_else = "deny"                # Consider if-let-else

# -----------------------------------------------------------------------------
# TYPE SAFETY - Like Gleam's strong static types  
# -----------------------------------------------------------------------------
cast_possible_truncation = "deny"         # ERROR on lossy integer casts
cast_sign_loss = "deny"                   # ERROR on sign-changing casts
cast_precision_loss = "deny"              # ERROR on float precision loss
cast_lossless = "deny"                    # Use .into() for lossless casts
float_cmp = "deny"                        # No direct float == comparisons
float_cmp_const = "deny"                  # No float == const comparisons

# -----------------------------------------------------------------------------
# SAFE INDEXING - Like Gleam's list.at() returning Option
# -----------------------------------------------------------------------------
indexing_slicing = "deny"                 # Prefer .get() over [] indexing

# -----------------------------------------------------------------------------
# CLARITY - Like Gleam's clean, readable syntax
# -----------------------------------------------------------------------------
bool_comparison = "deny"                  # No `if x == true`
needless_bool = "deny"                    # No `if x { true } else { false }`
match_bool = "deny"                       # Prefer if/else over match on bool
redundant_pattern_matching = "deny"       # No redundant patterns
collapsible_if = "deny"                   # Combine nested ifs
collapsible_else_if = "deny"              # Use else if, not else { if }
if_not_else = "deny"                      # Prefer if positive { } else { }

# -----------------------------------------------------------------------------
# COMPLEXITY LIMITS - Keep functions small and focused
# -----------------------------------------------------------------------------
cognitive_complexity = "deny"             # Limit cyclomatic complexity
too_many_arguments = "warn"               # Functions with too many args (>7)
fn_params_excessive_bools = "deny"        # Too many bool params is confusing

# -----------------------------------------------------------------------------
# NAMING - Like Gleam's snake_case consistency
# -----------------------------------------------------------------------------
enum_variant_names = "deny"               # Don't prefix variants with enum name

# -----------------------------------------------------------------------------
# CORRECTNESS GROUPS - Enable entire lint groups AS ERRORS
# -----------------------------------------------------------------------------
correctness = { level = "deny", priority = -1 }   # All correctness lints - CRITICAL
suspicious = { level = "deny", priority = -1 }    # Suspicious code patterns - CRITICAL
complexity = { level = "deny", priority = -1 }    # Overly complex code
perf = { level = "deny", priority = -1 }          # Performance issues
style = { level = "deny", priority = -1 }         # Style consistency
pedantic = { level = "deny", priority = -1 }      # Maximum strictness

# -----------------------------------------------------------------------------
# DOCUMENTATION LINTS - Disabled (not part of type safety)
# -----------------------------------------------------------------------------
missing_errors_doc = "allow"              # Don't require # Errors section
missing_panics_doc = "allow"              # Don't require # Panics section
missing_docs_in_private_items = "allow"   # Don't require docs on private items
doc_markdown = "allow"                    # Don't lint doc comment formatting

# -----------------------------------------------------------------------------
# STYLE LINTS - Disabled (not type safety)
# -----------------------------------------------------------------------------
module_name_repetitions = "allow"         # Not type safety
similar_names = "allow"                   # Not type safety
uninlined_format_args = "allow"           # Not type safety (format!("{}", x) vs format!("{x}"))
must_use_candidate = "allow"              # Too noisy
wildcard_imports = "allow"                # Not type safety
manual_let_else = "allow"                 # Style preference
too_many_lines = "allow"                  # Not type safety - allow long functions
redundant_else = "allow"                  # Style preference
items_after_statements = "allow"          # Not type safety
return_self_not_must_use = "allow"        # Builder pattern style
needless_raw_string_hashes = "allow"      # Raw string style
struct_excessive_bools = "allow"          # Struct design style
struct_field_names = "allow"              # Naming style
ref_option = "allow"                      # Reference style (deprecated rename)
ref_option_ref = "allow"                  # Reference style
implicit_hasher = "allow"                 # HashMap generalization
format_push_string = "allow"              # String formatting style
map_unwrap_or = "allow"                   # Option handling style (override the deny above)
option_if_let_else = "allow"              # Option handling style (override the deny above)
match_same_arms = "allow"                 # Duplicated code detection

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json", "blocking"] }

# Async runtime (only needed for lib, not binaries)
tokio = { version = "1.0", features = ["full"], optional = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# OAuth 1.0a signing
base64 = "0.22"
ring = "0.17"
hex = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Date/time handling
chrono = "0.4"

# URL encoding
url = "2.5"
serial_test = "3.2.0"
aes-gcm = "0.10.3"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "macros", "migrate"] }
sqlx-cli = { version = "0.8.6", features = ["rustls"], optional = true }

[lib]
name = "meal_planner"
path = "src/mod.rs"

# Domain binaries (JSON in -> JSON out)
# Naming: <domain>_<operation>

[[bin]]
name = "tandoor_test_connection"
path = "src/bin/tandoor_test_connection.rs"

[[bin]]
name = "fatsecret_oauth_start"
path = "src/bin/fatsecret_oauth_start.rs"

[[bin]]
name = "fatsecret_oauth_callback"
path = "src/bin/fatsecret_oauth_callback.rs"

[[bin]]
name = "fatsecret_get_token"
path = "src/bin/fatsecret_get_token.rs"

[[bin]]
name = "fatsecret_oauth_complete"
path = "src/bin/fatsecret_oauth_complete.rs"

[[bin]]
name = "fatsecret_get_profile"
path = "src/bin/fatsecret_get_profile.rs"

[[bin]]
name = "tandoor_scrape_recipe"
path = "src/bin/tandoor_scrape_recipe.rs"

[[bin]]
name = "tandoor_create_recipe"
path = "src/bin/tandoor_create_recipe.rs"

[[bin]]
name = "fatsecret_foods_search"
path = "src/bin/fatsecret_foods_search.rs"

[features]
sqlx-cli = ["dep:sqlx-cli"]

# Optimized build profiles for fast iteration
[profile.dev]
opt-level = 0
incremental = true
debug = 0                          # Skip DWARF, faster link

[profile.dev.package."*"]
opt-level = 2                      # Optimize dependencies

[profile.test]
opt-level = 0
debug = 0
incremental = true

[profile.release]
opt-level = 3
lto = "thin"           # Faster than "fat" LTO, still good optimization
codegen-units = 16     # Parallel codegen (matches core count)
strip = "symbols"      # Strip symbols - smaller binaries, faster link
debug = 0              # No debug info in release
