[package]
name = "meal-planner"
version = "0.1.0"
edition = "2021"

# =============================================================================
# GLEAM-STYLE STRICT SAFETY LINTS
# =============================================================================
# These lints enforce SOME of Gleam's design principles in Rust.
#
# WHAT LINTS CAN ENFORCE (~60-70% of Gleam's guarantees):
# - No .unwrap()/.expect()/panic!() in YOUR code
# - No unsafe blocks in YOUR code (deps can still use it)
# - Functional style preferences (map/filter vs loops)
# - Exhaustive matching style (rustc already enforces completeness)
#
# WHAT LINTS CANNOT CATCH (fundamental language differences):
# - Integer overflow: Wraps silently in release (mitigated: overflow-checks=true)
# - Stdlib panics: vec.remove(i), str.split_at(n), 1/0, etc.
# - Indirect panics: .unwrap_or_else(|| panic!()), assert!()
# - Stack overflow: No TCO in Rust, deep recursion crashes
# - Dependency unsafe: forbid(unsafe_code) only applies to THIS crate
# - OOM: Vec::push() can panic on allocation failure
#
# For true Gleam-level safety, you'd also need:
# - Audit all dependencies for panic paths
# - Wrap all stdlib calls that can panic
# - Accept you're fighting the language's design choices
# =============================================================================

[lints.rust]
# -----------------------------------------------------------------------------
# MEMORY SAFETY - Like Gleam, memory is always safe
# -----------------------------------------------------------------------------
unsafe_code = "forbid"                    # FORBIDDEN: No unsafe blocks anywhere
                                          # This cannot be bypassed with #[allow]

# -----------------------------------------------------------------------------
# EXHAUSTIVENESS - Like Gleam's exhaustive pattern matching
# -----------------------------------------------------------------------------
unused_must_use = "deny"                  # Must handle all Results/Options
unreachable_patterns = "deny"             # No dead pattern branches
# non_exhaustive_omitted_patterns requires nightly feature flag - disabled for now
# non_exhaustive_omitted_patterns = "deny"  # Require handling all enum variants

# -----------------------------------------------------------------------------
# IMMUTABILITY - Like Gleam, prefer immutable by default
# -----------------------------------------------------------------------------
unused_mut = "deny"                       # No unnecessary mut keywords
unused_variables = "deny"                 # No dead bindings
unused_assignments = "deny"               # No dead assignments

# -----------------------------------------------------------------------------
# CORRECTNESS - Like Gleam's compile-time guarantees
# -----------------------------------------------------------------------------
trivial_casts = "deny"                    # No pointless casts
trivial_numeric_casts = "deny"            # No pointless numeric casts
unused_imports = "deny"                   # No unused imports
dead_code = "deny"                        # No unreachable code

# -----------------------------------------------------------------------------
# DOCUMENTATION - Optional, not safety-critical
# -----------------------------------------------------------------------------
# missing_docs = "warn"                   # Encouraged but not required

[lints.clippy]
# =============================================================================
# CLIPPY: GLEAM-STYLE FUNCTIONAL PURITY - ALL ERRORS, NO WARNINGS
# =============================================================================

# -----------------------------------------------------------------------------
# NO PANICS - Like Gleam, errors are values (Result), not exceptions
# -----------------------------------------------------------------------------
unwrap_used = "deny"                      # No .unwrap() - handle errors explicitly
expect_used = "deny"                      # No .expect() - handle errors explicitly
panic = "deny"                            # No panic!() - return Result instead
todo = "deny"                             # No todo!() - complete the implementation
unimplemented = "deny"                    # No unimplemented!() - handle all cases
unreachable = "deny"                      # No unreachable!() - prove with types

# Additional panic sources
unwrap_in_result = "deny"                 # No unwrap inside Result-returning fn
panic_in_result_fn = "deny"               # No panic! in Result-returning fn
exit = "deny"                             # No std::process::exit

# Assertions (these can panic - warn but allow for debugging)
assertions_on_result_states = "allow"     # assert!(x.is_ok()) allowed in tests
assertions_on_constants = "deny"          # assert!(true) is pointless

# Arithmetic that can panic (division by zero, etc.)
# Note: This is VERY strict and may require many allows
# arithmetic_side_effects = "warn"        # Disabled: too noisy, use checked_* methods

# -----------------------------------------------------------------------------
# EXPLICIT ERROR HANDLING - Like Gleam's Result type
# -----------------------------------------------------------------------------
# result_unwrap_used and option_unwrap_used are now just unwrap_used (set above)
let_underscore_must_use = "deny"          # Don't discard important values
match_result_ok = "deny"                  # Prefer proper Result handling
map_unwrap_or = "deny"                    # Prefer map_or/map_or_else

# -----------------------------------------------------------------------------
# IMMUTABILITY - Like Gleam, values don't change
# -----------------------------------------------------------------------------
mut_mut = "deny"                          # No &&mut mut
needless_borrow = "deny"                  # No unnecessary &
redundant_clone = "deny"                  # No unnecessary clones
clone_on_ref_ptr = "deny"                 # No cloning Arc/Rc unnecessarily
unnecessary_mut_passed = "deny"           # Don't pass &mut when & suffices

# -----------------------------------------------------------------------------
# FUNCTIONAL STYLE - Like Gleam's pipelines and combinators
# -----------------------------------------------------------------------------
manual_map = "deny"                       # Use .map() instead of match
manual_filter = "deny"                    # Use .filter() instead of match
manual_filter_map = "deny"                # Use .filter_map()
manual_find = "deny"                      # Use .find()
manual_find_map = "deny"                  # Use .find_map()
manual_flatten = "deny"                   # Use .flatten()
manual_ok_or = "deny"                     # Use .ok_or()
option_if_let_else = "deny"               # Use .map_or_else()
needless_pass_by_value = "deny"           # Prefer references for large types
large_types_passed_by_value = "deny"      # Large types should be references

# -----------------------------------------------------------------------------
# ITERATOR-FIRST - Prefer functional iteration over imperative loops
# -----------------------------------------------------------------------------
explicit_iter_loop = "deny"               # Use .iter() not `for x in &collection`
explicit_into_iter_loop = "deny"          # Use .into_iter() not `for x in collection`
iter_without_into_iter = "deny"           # If you have iter(), have into_iter()
manual_while_let_some = "deny"            # Use iterator methods, not while let

# -----------------------------------------------------------------------------
# MINIMIZE MUTATION - As close to immutable as Rust allows
# -----------------------------------------------------------------------------
needless_pass_by_ref_mut = "deny"         # Don't use &mut when & suffices

# -----------------------------------------------------------------------------
# EXHAUSTIVE MATCHING - Like Gleam's case expressions
# -----------------------------------------------------------------------------
match_same_arms = "deny"                  # Combine identical match arms
match_single_binding = "deny"             # Simplify single-binding matches
match_wildcard_for_single_variants = "deny"  # Be explicit about variants
wildcard_enum_match_arm = "deny"          # Prefer explicit enum matching
single_match = "deny"                     # Consider if-let for single matches
single_match_else = "deny"                # Consider if-let-else

# -----------------------------------------------------------------------------
# TYPE SAFETY - Like Gleam's strong static types  
# -----------------------------------------------------------------------------
cast_possible_truncation = "deny"         # ERROR on lossy integer casts
cast_sign_loss = "deny"                   # ERROR on sign-changing casts
cast_precision_loss = "deny"              # ERROR on float precision loss
cast_lossless = "deny"                    # Use .into() for lossless casts
float_cmp = "deny"                        # No direct float == comparisons
float_cmp_const = "deny"                  # No float == const comparisons

# -----------------------------------------------------------------------------
# SAFE INDEXING - Like Gleam's list.at() returning Option
# -----------------------------------------------------------------------------
indexing_slicing = "deny"                 # Prefer .get() over [] indexing

# -----------------------------------------------------------------------------
# CLARITY - Like Gleam's clean, readable syntax
# -----------------------------------------------------------------------------
bool_comparison = "deny"                  # No `if x == true`
needless_bool = "deny"                    # No `if x { true } else { false }`
match_bool = "deny"                       # Prefer if/else over match on bool
redundant_pattern_matching = "deny"       # No redundant patterns
collapsible_if = "deny"                   # Combine nested ifs
collapsible_else_if = "deny"              # Use else if, not else { if }
if_not_else = "deny"                      # Prefer if positive { } else { }

# -----------------------------------------------------------------------------
# COMPLEXITY LIMITS - Keep functions small and focused
# -----------------------------------------------------------------------------
cognitive_complexity = "deny"             # Limit cyclomatic complexity
too_many_arguments = "warn"               # Functions with too many args - refactor over time
too_many_lines = "warn"                   # Functions that are too long - refactor over time
fn_params_excessive_bools = "deny"        # Too many bool params is confusing

# -----------------------------------------------------------------------------
# NAMING - Like Gleam's snake_case consistency  
# -----------------------------------------------------------------------------
enum_variant_names = "deny"               # Don't prefix variants with enum name

# -----------------------------------------------------------------------------
# OPTION/RESULT DISCIPLINE - Like Gleam's explicit error handling
# -----------------------------------------------------------------------------
ok_expect = "deny"                        # Don't use .ok().expect()
try_err = "deny"                          # Force ? propagation patterns

# -----------------------------------------------------------------------------
# NUMERIC SAFETY - Gleam has safe arithmetic
# -----------------------------------------------------------------------------
integer_division = "warn"                 # Warn on integer division (truncates)
cast_possible_wrap = "deny"               # Deny casts that could wrap

# -----------------------------------------------------------------------------
# CORRECTNESS GROUPS - Enable entire lint groups AS ERRORS
# -----------------------------------------------------------------------------
correctness = { level = "deny", priority = -1 }   # All correctness lints - CRITICAL
suspicious = { level = "deny", priority = -1 }    # Suspicious code patterns - CRITICAL
complexity = { level = "deny", priority = -1 }    # Overly complex code
perf = { level = "deny", priority = -1 }          # Performance issues
style = { level = "deny", priority = -1 }         # Style consistency
nursery = { level = "warn", priority = -1 }       # Experimental lints (warn, not deny)
cargo = { level = "warn", priority = -1 }         # Cargo.toml best practices

# -----------------------------------------------------------------------------
# PEDANTIC - Enable but allow documentation-related noise
# -----------------------------------------------------------------------------
pedantic = { level = "deny", priority = -1 }      # Maximum strictness

# -----------------------------------------------------------------------------
# PEDANTIC OVERRIDES - Allow style preferences that don't affect safety
# We want Gleam's SAFETY, not every pedantic style rule
# -----------------------------------------------------------------------------
# Documentation pedantry
doc_markdown = "allow"                    # Don't require backticks in docs
missing_errors_doc = "allow"              # Don't require error docs
missing_panics_doc = "allow"              # Don't require panic docs (we don't panic anyway)
module_name_repetitions = "allow"         # Allow FatSecretConfig in fatsecret::config

# Style preferences (not safety)
needless_raw_string_hashes = "allow"      # r#""# vs r"" is just style
must_use_candidate = "allow"              # Don't require #[must_use] everywhere
implicit_hasher = "allow"                 # HashMap<K,V> is fine, don't need BuildHasher
uninlined_format_args = "allow"           # format!("{}", x) vs format!("{x}") is style
items_after_statements = "allow"          # Allow defining helpers after use
similar_names = "allow"                   # Allow oauth_token vs oauth_token_secret

# Cargo metadata (not safety, just packaging)
cargo_common_metadata = "allow"           # Don't require description/license for internal crate
multiple_crate_versions = "allow"         # Dependencies can have version conflicts

# Nursery lints that are too noisy
missing_const_for_fn = "allow"            # Too noisy, const fn is optimization not safety
trivially_copy_pass_by_ref = "allow"      # Style preference, not safety

# Pedantic style that's too strict for existing code
struct_field_names = "allow"              # Allow saved_meal_id in SavedMeal struct
wrong_self_convention = "allow"           # Allow to_* methods taking &self
unreadable_literal = "allow"              # Hex constants don't need separators
wildcard_imports = "allow"                # Allow use module::*
manual_let_else = "allow"                 # let...else is newer, don't require it yet
use_self = "allow"                        # Self vs TypeName is style, not safety

[dependencies]
# HTTP client
reqwest = { version = "0.12", features = ["json", "blocking", "multipart"] }

# Async runtime (only needed for lib, not binaries)
tokio = { version = "1.0", features = ["full"], optional = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# OAuth 1.0a signing
base64 = "0.22"
ring = "0.17"
hex = "0.4"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"

# Date/time handling
chrono = "0.4"

# URL encoding
url = "2.5"
serial_test = "3.2.0"
aes-gcm = "0.10.3"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "chrono", "macros", "migrate"] }
sqlx-cli = { version = "0.8.6", features = ["rustls"], optional = true }
once_cell = "1.19"

[lib]
name = "meal_planner"
path = "src/mod.rs"

# Domain binaries (JSON in -> JSON out)
# Naming: <domain>_<operation>

[[bin]]
name = "tandoor_test_connection"
path = "src/bin/tandoor_test_connection.rs"

[[bin]]
name = "fatsecret_oauth_start"
path = "src/bin/fatsecret_oauth_start.rs"

[[bin]]
name = "fatsecret_oauth_complete"
path = "src/bin/fatsecret_oauth_complete.rs"

[[bin]]
name = "fatsecret_get_profile"
path = "src/bin/fatsecret_get_profile.rs"

[[bin]]
name = "tandoor_scrape_recipe"
path = "src/bin/tandoor_scrape_recipe.rs"

[[bin]]
name = "tandoor_create_recipe"
path = "src/bin/tandoor_create_recipe.rs"

[[bin]]
name = "fatsecret_foods_search"
path = "src/bin/fatsecret_foods_search.rs"

[[bin]]
name = "fatsecret_food_get"
path = "src/bin/fatsecret_food_get.rs"

[[bin]]
name = "fatsecret_food_add_favorite"
path = "src/bin/fatsecret_food_add_favorite.rs"

[[bin]]
name = "fatsecret_food_delete_favorite"
path = "src/bin/fatsecret_food_delete_favorite.rs"

[[bin]]
name = "fatsecret_foods_get_favorites"
path = "src/bin/fatsecret_foods_get_favorites.rs"

[[bin]]
name = "fatsecret_food_entries_get"
path = "src/bin/fatsecret_food_entries_get.rs"

[[bin]]
name = "fatsecret_food_entries_get_month"
path = "src/bin/fatsecret_food_entries_get_month.rs"

[[bin]]
name = "fatsecret_food_entry_create"
path = "src/bin/fatsecret_food_entry_create.rs"

[[bin]]
name = "fatsecret_food_entry_edit"
path = "src/bin/fatsecret_food_entry_edit.rs"

[[bin]]
name = "fatsecret_food_entry_delete"
path = "src/bin/fatsecret_food_entry_delete.rs"

[[bin]]
name = "fatsecret_exercise_entries_get"
path = "src/bin/fatsecret_exercise_entries_get.rs"

[[bin]]
name = "fatsecret_exercise_entry_create"
path = "src/bin/fatsecret_exercise_entry_create.rs"

[[bin]]
name = "fatsecret_exercise_entry_edit"
path = "src/bin/fatsecret_exercise_entry_edit.rs"

[[bin]]
name = "fatsecret_exercise_entry_delete"
path = "src/bin/fatsecret_exercise_entry_delete.rs"

[[bin]]
name = "fatsecret_exercise_month_summary"
path = "src/bin/fatsecret_exercise_month_summary.rs"

[[bin]]
name = "fatsecret_recipe_get"
path = "src/bin/fatsecret_recipe_get.rs"

[[bin]]
name = "fatsecret_recipes_search"
path = "src/bin/fatsecret_recipes_search.rs"

[[bin]]
name = "fatsecret_saved_meals_get"
path = "src/bin/fatsecret_saved_meals_get.rs"

[[bin]]
name = "fatsecret_saved_meals_get_items"
path = "src/bin/fatsecret_saved_meals_get_items.rs"

[[bin]]
name = "fatsecret_saved_meals_create"
path = "src/bin/fatsecret_saved_meals_create.rs"

[[bin]]
name = "fatsecret_saved_meals_edit"
path = "src/bin/fatsecret_saved_meals_edit.rs"

[[bin]]
name = "fatsecret_saved_meals_delete"
path = "src/bin/fatsecret_saved_meals_delete.rs"

[[bin]]
name = "fatsecret_weight_update"
path = "src/bin/fatsecret_weight_update.rs"

[[bin]]
name = "fatsecret_weight_month_summary"
path = "src/bin/fatsecret_weight_month_summary.rs"

[[bin]]
name = "fatsecret_foods_most_eaten"
path = "src/bin/fatsecret_foods_most_eaten.rs"

[[bin]]
name = "fatsecret_foods_recently_eaten"
path = "src/bin/fatsecret_foods_recently_eaten.rs"

[[bin]]
name = "fatsecret_recipe_add_favorite"
path = "src/bin/fatsecret_recipe_add_favorite.rs"

[[bin]]
name = "fatsecret_recipe_delete_favorite"
path = "src/bin/fatsecret_recipe_delete_favorite.rs"

[[bin]]
name = "fatsecret_recipes_get_favorites"
path = "src/bin/fatsecret_recipes_get_favorites.rs"

[[bin]]
name = "fatsecret_recipe_types_get"
path = "src/bin/fatsecret_recipe_types_get.rs"

[[bin]]
name = "tandoor_keyword_list"
path = "src/bin/tandoor_keyword_list.rs"

[[bin]]
name = "tandoor_keyword_create"
path = "src/bin/tandoor_keyword_create.rs"

[[bin]]
name = "tandoor_keyword_get"
path = "src/bin/tandoor_keyword_get.rs"

[[bin]]
name = "tandoor_keyword_update"
path = "src/bin/tandoor_keyword_update.rs"

[[bin]]
name = "tandoor_keyword_delete"
path = "src/bin/tandoor_keyword_delete.rs"

[[bin]]
name = "tandoor_recipe_list"
path = "src/bin/tandoor_recipe_list.rs"

[[bin]]
name = "tandoor_recipe_get"
path = "src/bin/tandoor_recipe_get.rs"

[[bin]]
name = "tandoor_food_list"
path = "src/bin/tandoor_food_list.rs"

[[bin]]
name = "tandoor_food_get"
path = "src/bin/tandoor_food_get.rs"

[[bin]]
name = "tandoor_food_create"
path = "src/bin/tandoor_food_create.rs"

[[bin]]
name = "tandoor_food_update"
path = "src/bin/tandoor_food_update.rs"

[[bin]]
name = "tandoor_food_delete"
path = "src/bin/tandoor_food_delete.rs"

[[bin]]
name = "tandoor_recipe_book_list"
path = "src/bin/tandoor_recipe_book_list.rs"

[[bin]]
name = "tandoor_recipe_book_get"
path = "src/bin/tandoor_recipe_book_get.rs"

[[bin]]
name = "tandoor_recipe_book_create"
path = "src/bin/tandoor_recipe_book_create.rs"

[[bin]]
name = "tandoor_recipe_book_update"
path = "src/bin/tandoor_recipe_book_update.rs"

[[bin]]
name = "tandoor_recipe_book_delete"
path = "src/bin/tandoor_recipe_book_delete.rs"

[[bin]]
name = "tandoor_recipe_book_entry_list"
path = "src/bin/tandoor_recipe_book_entry_list.rs"

[[bin]]
name = "tandoor_recipe_book_entry_get"
path = "src/bin/tandoor_recipe_book_entry_get.rs"

[[bin]]
name = "tandoor_recipe_book_entry_create"
path = "src/bin/tandoor_recipe_book_entry_create.rs"

[[bin]]
name = "tandoor_recipe_book_entry_delete"
path = "src/bin/tandoor_recipe_book_entry_delete.rs"

[[bin]]
name = "tandoor_recipe_batch_update"
path = "src/bin/tandoor_recipe_batch_update.rs"

[[bin]]
name = "tandoor_recipe_list_flat"
path = "src/bin/tandoor_recipe_list_flat.rs"

[[bin]]
name = "tandoor_recipe_get_related"
path = "src/bin/tandoor_recipe_get_related.rs"

[[bin]]
name = "tandoor_recipe_upload_image"
path = "src/bin/tandoor_recipe_upload_image.rs"

[[bin]]
name = "tandoor_user_get"
path = "src/bin/tandoor_user_get.rs"

[[bin]]
name = "tandoor_user_list"
path = "src/bin/tandoor_user_list.rs"

[[bin]]
name = "tandoor_food_batch_update"
path = "src/bin/tandoor_food_batch_update.rs"

[[bin]]
name = "tandoor_shopping_list_recipe_get"
path = "src/bin/tandoor_shopping_list_recipe_get.rs"

[[bin]]
name = "tandoor_shopping_list_recipe_delete"
path = "src/bin/tandoor_shopping_list_recipe_delete.rs"

[[bin]]
name = "tandoor_shopping_list_entry_bulk"
path = "src/bin/tandoor_shopping_list_entry_bulk.rs"

[[bin]]
name = "tandoor_meal_plan_export_ical"
path = "src/bin/tandoor_meal_plan_export_ical.rs"

[[bin]]
name = "tandoor_step_list"
path = "src/bin/tandoor_step_list.rs"

[[bin]]
name = "tandoor_step_get"
path = "src/bin/tandoor_step_get.rs"

[[bin]]
name = "tandoor_step_create"
path = "src/bin/tandoor_step_create.rs"

[[bin]]
name = "tandoor_step_update"
path = "src/bin/tandoor_step_update.rs"

[[bin]]
name = "tandoor_step_delete"
path = "src/bin/tandoor_step_delete.rs"

[[bin]]
name = "tandoor_space_list"
path = "src/bin/tandoor_space_list.rs"

[[bin]]
name = "tandoor_space_get"
path = "src/bin/tandoor_space_get.rs"

[[bin]]
name = "tandoor_supermarket_list"
path = "src/bin/tandoor_supermarket_list.rs"

[[bin]]
name = "tandoor_supermarket_get"
path = "src/bin/tandoor_supermarket_get.rs"

[[bin]]
name = "tandoor_supermarket_create"
path = "src/bin/tandoor_supermarket_create.rs"

[[bin]]
name = "tandoor_supermarket_update"
path = "src/bin/tandoor_supermarket_update.rs"

[[bin]]
name = "tandoor_supermarket_delete"
path = "src/bin/tandoor_supermarket_delete.rs"

# Unit binaries
[[bin]]
name = "tandoor_unit_list"
path = "src/bin/tandoor_unit_list.rs"

[[bin]]
name = "tandoor_unit_get"
path = "src/bin/tandoor_unit_get.rs"

[[bin]]
name = "tandoor_unit_create"
path = "src/bin/tandoor_unit_create.rs"

[[bin]]
name = "tandoor_unit_update"
path = "src/bin/tandoor_unit_update.rs"

[[bin]]
name = "tandoor_unit_delete"
path = "src/bin/tandoor_unit_delete.rs"

[[bin]]
name = "tandoor_unit_conversion_list"
path = "src/bin/tandoor_unit_conversion_list.rs"

# Ingredient binaries
[[bin]]
name = "tandoor_ingredient_list"
path = "src/bin/tandoor_ingredient_list.rs"

[[bin]]
name = "tandoor_ingredient_get"
path = "src/bin/tandoor_ingredient_get.rs"

[[bin]]
name = "tandoor_ingredient_create"
path = "src/bin/tandoor_ingredient_create.rs"

[[bin]]
name = "tandoor_ingredient_update"
path = "src/bin/tandoor_ingredient_update.rs"

[[bin]]
name = "tandoor_ingredient_delete"
path = "src/bin/tandoor_ingredient_delete.rs"

[[bin]]
name = "tandoor_ingredient_from_string"
path = "src/bin/tandoor_ingredient_from_string.rs"

[[bin]]
name = "tandoor_ai_import"
path = "src/bin/tandoor_ai_import.rs"

# Property Type binaries
[[bin]]
name = "tandoor_property_type_list"
path = "src/bin/tandoor_property_type_list.rs"

[[bin]]
name = "tandoor_property_type_get"
path = "src/bin/tandoor_property_type_get.rs"

[[bin]]
name = "tandoor_property_type_create"
path = "src/bin/tandoor_property_type_create.rs"

[[bin]]
name = "tandoor_property_type_update"
path = "src/bin/tandoor_property_type_update.rs"

[[bin]]
name = "tandoor_property_type_delete"
path = "src/bin/tandoor_property_type_delete.rs"

# Property binaries
[[bin]]
name = "tandoor_property_list"
path = "src/bin/tandoor_property_list.rs"

[[bin]]
name = "tandoor_property_get"
path = "src/bin/tandoor_property_get.rs"

[[bin]]
name = "tandoor_property_create"
path = "src/bin/tandoor_property_create.rs"

[[bin]]
name = "tandoor_property_update"
path = "src/bin/tandoor_property_update.rs"

[[bin]]
name = "tandoor_property_delete"
path = "src/bin/tandoor_property_delete.rs"

[features]
sqlx-cli = ["dep:sqlx-cli"]

# Optimized build profiles for fast iteration
[profile.dev]
opt-level = 0
incremental = true
debug = 0                          # Skip DWARF, faster link

[profile.dev.package."*"]
opt-level = 2                      # Optimize dependencies

[profile.test]
opt-level = 0
debug = 0
incremental = true

[dev-dependencies]
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = "thin"           # Faster than "fat" LTO, still good optimization
codegen-units = 16     # Parallel codegen (matches core count)
strip = "symbols"      # Strip symbols - smaller binaries, faster link
debug = 0              # No debug info in release
overflow-checks = true # CRITICAL: Panic on overflow instead of silent wrap
